Update index.html 1

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Welcome to Nginx</title>
 </head>
 <body>
-    <h1>Hello, Nginx is running inside Docker!</h1>
+    <h1>Hello, Nginx is running outside Docker!</h1>
 </body>
 </html>
